# wlan-ucentral-client

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  apply.c  blink.c  cert.pem  cmd.c  collide.c  config.c  crashlog.c  event.c  failsafe.c  health.c  main.c  package.c  proto.c  rebootlog.c  task.c  ubus.c  ucentral.h  upload.c  usync.h  usync_apply.sh  usync_capabilities.tpl  usync_state.sh  usync_verify.sh  verify.c  version.c
.github/workflows/: openwrt-ci.yml
